--- a/projects/DailySpendLimit/src/index.html
+++ b/projects/DailySpendLimit/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta charset="utf-8">
   <title>Daily Spend Limit</title>
   <meta name="theme-color" content="#3f51b5">
-  <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="description" content="Daily Spend Limit" />
-  <meta name="author" content="Tanmoy Bagchi" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="mobile-web-app-capable" content="yes"/>
+  <meta name="description" content="Daily Spend Limit"/>
+  <meta name="author" content="Tanmoy Bagchi"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="format-detection" content="telephone=no">
   <base href="/dailyspendlimit/">
   <!--Frame busting. https://www.owasp.org/index.php/Clickjacking_Defense_Cheat_Sheet#Best-for-now_Legacy_Browser_Frame_Breaking_Script-->
@@ -26,6 +26,7 @@
     }
   </script>
   <!--End Frame busting.-->
+  <link rel="manifest" href="manifest.json">
 </head>
 <body class="mat-app-background mat-typography">
   <noscript>
