--- a/projects/VinesToWinesDM/src/index.html
+++ b/projects/VinesToWinesDM/src/index.html
@@ -10,6 +10,8 @@
   <meta name="author" content="Tanmoy Bagchi" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="format-detection" content="telephone=no">
+  <meta name="google-site-verification" content="JjlyODhjYKln9fn7J_fy4YYm29Lkt15z9mNBzPHbFL0" />
+  <meta name="google-site-verification" content="6dCUWKvy4n9Y2XJ69J-06KUTE_BWpc-SW49n2Be1Z1A" />
   <base href="/VinesToWinesDM/">
   <!--Frame busting. https://www.owasp.org/index.php/Clickjacking_Defense_Cheat_Sheet#Best-for-now_Legacy_Browser_Frame_Breaking_Script-->
   <style id="antiClickjack">
