--- a/projects/TiffanysKitchen/src/index.html
+++ b/projects/TiffanysKitchen/src/index.html
@@ -6,7 +6,7 @@
   <title>Tiffany's Kitchen</title>
   <meta name="theme-color" content="#00bcd4">
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="description" content="Tiffany's kitchen" />
+  <meta name="description" content="Tiffany's Kitchen" />
   <meta name="author" content="Tanmoy Bagchi" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="format-detection" content="telephone=no">
@@ -26,7 +26,7 @@
     }
   </script>
   <!--End Frame busting.-->
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body class="mat-app-background mat-typography">
   <noscript>
