--- a/projects/DailySpendLimit/src/index.html
+++ b/projects/DailySpendLimit/src/index.html
@@ -26,7 +26,7 @@
     }
   </script>
   <!--End Frame busting.-->
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body class="mat-app-background mat-typography">
   <noscript>
