--- a/projects/RedditReader/src/index.html
+++ b/projects/RedditReader/src/index.html
@@ -26,6 +26,8 @@
     }
   </script>
   <!--End Frame busting.-->
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body class="mat-app-background mat-typography">
   <noscript>
