--- a/projects/RedditReader/src/index.html
+++ b/projects/RedditReader/src/index.html
@@ -38,5 +38,5 @@
 
   <rr-app-root></rr-app-root>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/shaka-player/2.5.6/shaka-player.compiled.js" async></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/shaka-player/2.5.6/shaka-player.compiled.js" async></script> -->
 </html>
